vlib/v/checker/tests/interface_field_name_err.vv
interface Animal {
	Age int
	Foo &int
	Bar []string
}

fn main() {
}
